kubernetes/clusters/kenobi/test/templates/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute

metadata:
  name: node-red
  namespace: test

spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`node-red.feldman.in`)
      kind: Rule
      services:
        - name: node-red
          port: 1880
  tls:
    secretName: node-red-feldman-in-tls
---
apiVersion: cert-manager.io/v1
kind: Certificate

metadata:
  name: node-red-feldman-in-tls
  namespace: test

spec:
  dnsNames:
    - node-red.feldman.in
  secretName: node-red-feldman-in-tls
  issuerRef:
    kind: ClusterIssuer
    name: letsencrypt-prod
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute

metadata:
  name: home-assistant
  namespace: test

spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`home-assistant.feldman.in`)
      kind: Rule
      services:
        - name: home-assistant
          port: 8123
  tls:
    secretName: home-assistant-feldman-in-tls
---
apiVersion: cert-manager.io/v1
kind: Certificate

metadata:
  name: home-assistant-feldman-in-tls
  namespace: test

spec:
  dnsNames:
    - home-assistant.feldman.in
  secretName: home-assistant-feldman-in-tls
  issuerRef:
    kind: ClusterIssuer
    name: letsencrypt-prod
