kubernetes/clusters/kenobi/test/templates/namespace.yaml
apiVersion: v1
kind: Namespace

metadata:
  name: test
  labels:
    istio-injection: enabled
